# 3D-Editor

./: .gitignore  CMakeLists.txt  README.md
localProjects/: Axis.txt  Cube.txt  Plane.txt  Spaceship.txt
src/: 3D-Editor.cpp
src/feature/: Button.cpp  Button.hpp  Camera.cpp  Camera.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Triangle.cpp  Triangle.hpp
src/managers/: ColorManager..cpp  ColorManager.hpp  FileManager.cpp  FileManager.hpp  FontManager.cpp  FontManager.hpp
src/ui/: Button.cpp  Button.hpp  CustomCursor.cpp  CustomCursor.hpp  InputBox.cpp  InputBox.hpp  Modal.cpp  Modal.hpp  Slider.cpp  Slider.hpp
src/utils/: Button.hpp  Mat4x4.cpp  Mat4x4.hpp  Quaternion.cpp  Quaternion.hpp  Vec3d.cpp  Vec3d.hpp
src/views/: Home.cpp  Home.hpp  Menu.cpp  Menu.hpp
